--- a/Practice_Inclass/Lesson 5/index.html
+++ b/Practice_Inclass/Lesson 5/index.html
@@ -16,36 +16,38 @@
    <div class="card-1__left">
     <div class="card-1__img-container">
     <img src="https://s3-alpha-sig.figma.com/img/1324/ca3e/50392bd349bd3f519959cb94c89cbe8a?Expires=1679270400&Signature=Kfc~zuOLX7sfrfyp3LLXT4ppXQZgp1RX1o2iMS~qpSRXRpmSDAVUsg~XU0171eCq86HmIY5q5uOQtIeHkmGMyWGlSIFxaszC4Dsdl66UYRDnGcUO426k~2RV2saV5Kl3rxCW133OqTUSDxXq-XuBmNweqqZDBx7lkV8j-W4m89F8bHBEXDH9d5y6Oayo6n0XPtcXG00uxnh6vxMxhCY2otxrUXLHQ1X0hAAN7qzj3LGhAF60GM1n9d5I9lSW00DxSEVnhzpjl6Km5p3DJ1yLHabX4DoVTAtWtTyOz4zgJ45ywvNrQbwvtcXSaMS83jZExtCzBxm7~e7gsNz4cKLNUg__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="" class="card-1__img-item">
-    <span class="card-1__status">Online</span>
+    <!-- <span class="card-1__status">Online</span> -->
     </div>
-    <div class="card-1__btns">
-     <div class="card-1__btn-container"> <!-- Change to <button>-->
+    <div class="card-1__btns mt-16">
+     <a href="" class="card-1__btn-container"> <!-- Change to <button>-->
       <i class="fa-solid fa-flag card-1__btn"></i>
-     </div>
-     <div class="card-1__btn-container"> <!-- Change to <button>-->
+     </a>
+     <a href="" class="card-1__btn-container"> <!-- Change to <button>-->
       <i class="fa-solid fa-microphone-slash card-1__btn"></i>
-     </div>
-     <div class="card-1__btn-container"> <!-- Change to <button>-->
+     </a>
+     <a href="" class="card-1__btn-container"> <!-- Change to <button>-->
       <i class="fa-solid fa-camera card-1__btn"></i>
-     </div>
+     </a> 
     </div>
    </div>
    <div class="card-1__right">
-    <h3 class="card-1__name fs-36">Olivia Little</h3> <!-- Change to <div>-->
-    <p class="card-1__job fs-18">UI/UX Designer</p> <!-- Change to <div>-->
-    <div class="card-1__location fs-18">
+		<div class="card-1__right-content pt-16">
+    <h3 class="card-1__name fs-36 mb-16">Olivia Little</h3> <!-- Change to <div>-->
+    <p class="card-1__job fs-18 mb-16">UI/UX Designer</p> <!-- Change to <div>-->
+    <div class="card-1__location fs-18 mb-16">
      <i class="fa-solid fa-location-crosshairs"></i>
      Seattle, USA 
     </div>
-    <div class="card-1__language-container">
+    <div class="card-1__language-container mb-16">
     <div class="card-1__speak fs-18">Speaks:</div>   
-    <div class="card-1__language fs-18">English, Spanish</div>  
+    <div class="card-1__language fs-18 ml-8">English, <br> Spanish</div>  
     </div>
-    <div class="card-1__social-container">
-    <button class="card-1__social-item"><i class="fa-brands fa-telegram fs-18"></i></button>  <!-- Put it in <button>-->
-    <button class="card-1__social-item"><i class="fa-brands fa-linkedin fs-18"></i></button>  <!-- Put it in <button>-->
-    <button class="card-1__social-item"><i class="fa-brands fa-dribbble fs-18"></i></button>  <!-- Put it in <button>-->
-    <button class="card-1__social-item"><i class="fa-brands fa-behance fs-18"></i></button>  <!-- Put it in <button>-->
+		</div>
+    <div class="card-1__social-container mt-16">
+    <a href="" class="card-1__social-link"><i class="fa-brands fa-telegram card-1__social-btn fs-18"></i></a>  <!-- Put it in <button>-->
+    <a href="" class="card-1__social-link"><i class="fa-brands fa-linkedin card-1__social-btn fs-18"></i></a>  <!-- Put it in <button>-->
+    <a href="" class="card-1__social-link"><i class="fa-brands fa-dribbble card-1__social-btn fs-18"></i></a>  <!-- Put it in <button>-->
+    <a href="" class="card-1__social-link"><i class="fa-brands fa-behance card-1__social-btn fs-18"></i></a>  <!-- Put it in <button>-->
     </div>
    </div>
   </div>
